--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL=http://localhost:5000
+VITE_AUTH_SERVER_URL=http://localhost:4000/auth/
+VITE_USER_SERVER_URL=http://localhost:5000
